--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "webpack-stream": "^7.0.0"
    },
    "dependencies": {
-      "sass-rem": "^3.0.0"
+      "sass-rem": "^3.0.0",
+      "swiper": "^9.0.3"
    }
 }
